Switched back to Ant project. Fixed RTL display for Farsi prayers.